# aind-labtracks-service

./: README.md  openapirc.json  openapirc_async.json
.github/workflows/: tag_and_publish.yml
aind-labtracks-service-async-client/: README.md  pyproject.toml  setup.py  tox.ini
aind-labtracks-service-async-client/.openapi-generator/: FILES
aind-labtracks-service-async-client/aind_labtracks_service_async_client/: __init__.py  api_client.py  configuration.py  rest.py
aind-labtracks-service-async-client/docs/: DefaultApi.md  HTTPValidationError.md  HealthCheck.md  HealthcheckApi.md  MouseCustomClass.md  Subject.md  Task.md  ValidationError.md  ValidationErrorLocInner.md
aind-labtracks-service-async-client/test/: test_default_api.py  test_health_check.py  test_healthcheck_api.py  test_http_validation_error.py  test_mouse_custom_class.py  test_subject.py  test_task.py  test_validation_error.py  test_validation_error_loc_inner.py
aind-labtracks-service-client/: README.md  pyproject.toml  setup.py  tox.ini
aind-labtracks-service-client/.openapi-generator/: FILES
aind-labtracks-service-client/aind_labtracks_service_client/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
aind-labtracks-service-client/docs/: DefaultApi.md  HTTPValidationError.md  HealthCheck.md  HealthcheckApi.md  MouseCustomClass.md  Subject.md  Task.md  ValidationError.md  ValidationErrorLocInner.md
aind-labtracks-service-client/test/: test_default_api.py  test_health_check.py  test_healthcheck_api.py  test_http_validation_error.py  (+4 more)
aind-labtracks-service-server/: Dockerfile  README.md  pyproject.toml
aind-labtracks-service-server/src/aind_labtracks_service_server/: configs.py  handler.py  main.py  models.py  route.py  session.py
aind-labtracks-service-server/tests/: conftest.py  test_configs.py  test_handler.py  test_main.py  test_models.py  test_route.py  test_session.py
aind-labtracks-service-server/tests/resources/: test_db.json
scripts/: generate_openapi.py
workflow_templates/: tag_and_publish.yml  test_server.yml
(+16 files in other folders)
