[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "aind-labtracks-service-server"
description = "Package to serve data from LabTracks."
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Allen Institute for Neural Dynamics"}
]
classifiers = [
    "Programming Language :: Python :: 3"
]
readme = "README.md"
dynamic = ["version"]

dependencies = [
    'aind-settings-utils>=0.1.0',
    'fastapi[standard]>=0.114.0',
    'sqlmodel',
    'pydantic>=2.0',
    'pydantic-xml',
    'pyodbc',
]

[project.optional-dependencies]
dev = [
    'black',
    'coverage',
    'flake8',
    'interrogate',
    'isort',
    'Sphinx',
    'furo',
    'pytest',
    'pytest-env',
    'pytest_asyncio',
    'fastapi-cache2[redis]>=0.2.2',
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "aind_labtracks_service_server.__version__"}

[tool.black]
line-length = 79
target_version = ['py310']
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | build
    | dist
    | env
  )/
  | .gitignore
)
'''

[tool.coverage.run]
omit = ["*__init__*"]
source = ["aind_labtracks_service_server", "tests"]

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.:",
    "^from .* import .*",
    "^import .*",
    "pragma: no cover"
]
fail_under = 100

[tool.isort]
line_length = 79
profile = "black"

[tool.interrogate]
exclude = ["setup.py", "docs", "build", "env"]
fail-under = 100

[tool.pytest.ini_options]
asyncio_mode="auto"
asyncio_default_fixture_loop_scope="function"
env = [
    "LABTRACKS_HOST=lb_host",
    "LABTRACKS_PASSWORD=lb_password",
    "LABTRACKS_USER=lb_user",
    "LABTRACKS_PORT=123",
    "LABTRACKS_DATABASE=lb_db",
]
